--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 build/.wafpickle-linux-50727408-20
 src/wave/examples/LSGO_Grid/trace.xml
+src/hirai/ped2000pas1000.tcl
+src/nearest/ped2000pas1000.tcl
